--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
-
-
-
-<!-- Toolbar -->
-<div>
+<app-Nav></app-Nav>
   
-  <h1>Datting</h1>
+<h1>Datting</h1>
 
   <app-Value-component></app-Value-component>
-</div>
+
 
 
 
